<resources>
    <string name="app_name">CalenderApp</string>

    <string name="no_event">No event</string>
    <string name="all_day">ALL DAY</string>

    <string name="title_agenda">Agenda View</string>
    <string name="title_calender">Calender View</string>
    <string name="title_add_event">Add Event</string>
    <string name="toast_date_missing">unexpected error</string>

    <string name="hint_event_name">Event name</string>
    <string name="hint_event_date">Date</string>
    <string name="hint_event_time">Time</string>
    <string name="hint_event_duration">Duration (in hours)</string>
    <string name="check_all_day">All day event</string>
    <string name="btn_add_event">Add Event</string>
    <string name="event_add_success">Event added successfully</string>

    <string name="error_event_name">Please enter valid event name</string>
    <string name="error_event_date">Please select date</string>
    <string name="error_event_time">Please select time</string>
    <string name="error_event_duration">Please enter valid duration</string>


</resources>
