<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_event_name"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <EditText
            android:id="@+id/input_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_name"
            android:inputType="textCapSentences"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_date"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_event_name">

        <EditText
            android:id="@+id/input_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/hint_event_date" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_time"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_date">

        <EditText
            android:id="@+id/input_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/hint_event_time" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_duration"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_time">

        <EditText
            android:id="@+id/input_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_duration"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_all_day"
        style="@style/EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_duration"
        android:text="@string/check_all_day" />

    <Button
        android:id="@+id/btn_add_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chk_all_day"
        android:layout_margin="16dp"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_add_event"
        android:textColor="@android:color/white" />

</RelativeLayout>
